Use sbt-typelevel for build (#5107)