@@ -15,18 +15,13 @@
  * under the License.
  */
 
-import sbt._
-import Keys._
+import sbt.*
+import Keys.*
 import explicitdeps.ExplicitDepsPlugin.autoImport.moduleFilterRemoveValue
-import sbtassembly.AssemblyPlugin.autoImport._
+import sbtassembly.AssemblyPlugin.autoImport.*
 import com.github.sbt.git.SbtGit.GitKeys.gitRemoteRepo
-import com.typesafe.tools.mima.core._
-import org.scalafmt.sbt.ScalafmtPlugin.scalafmtConfigSettings
-import bloop.integrations.sbt.BloopDefaults
 import de.heikoseeberger.sbtheader.CommentCreator
-import _root_.io.github.davidgregory084.DevMode
-
-ThisBuild / turbo := true
+import org.typelevel.scalacoptions.JavaMajorVersion.javaMajorVersion
 
 val beamVendorVersion = "0.1"
 val beamVersion = "2.52.0"
@@ -148,74 +143,218 @@ val scalatestplusVersion = s"$scalatestVersion.0"
 
 val NothingFilter: explicitdeps.ModuleFilter = { _ => false }
 
-ThisBuild / tpolecatDefaultOptionsMode := DevMode
-ThisBuild / tpolecatDevModeOptions ~= { opts =>
-  val excludes = Set(
-    ScalacOptions.lintPackageObjectClasses,
-    ScalacOptions.privateWarnDeadCode,
-    ScalacOptions.privateWarnValueDiscard,
-    ScalacOptions.warnDeadCode,
-    ScalacOptions.warnNonUnitStatement,
-    ScalacOptions.warnValueDiscard
+// project
+ThisBuild / tlBaseVersion := "0.14"
+ThisBuild / tlSonatypeUseLegacyHost := true
+ThisBuild / organization := "com.spotify"
+ThisBuild / organizationName := "Spotify AB"
+ThisBuild / startYear := Some(2016)
+ThisBuild / licenses := Seq(License.Apache2)
+ThisBuild / developers := List(
+  Developer(
+    id = "sinisa_lyh",
+    name = "Neville Li",
+    email = "neville.lyh@gmail.com",
+    url = url("https://twitter.com/sinisa_lyh")
+  ),
+  Developer(
+    id = "ravwojdyla",
+    name = "Rafal Wojdyla",
+    email = "ravwojdyla@gmail.com",
+    url = url("https://twitter.com/ravwojdyla")
+  ),
+  Developer(
+    id = "andrewsmartin",
+    name = "Andrew Martin",
+    email = "andrewsmartin.mg@gmail.com",
+    url = url("https://twitter.com/andrew_martin92")
+  ),
+  Developer(
+    id = "fallonfofallon",
+    name = "Fallon Chen",
+    email = "fallon@spotify.com",
+    url = url("https://twitter.com/fallonfofallon")
+  ),
+  Developer(
+    id = "regadas",
+    name = "Filipe Regadas",
+    email = "filiperegadas@gmail.com",
+    url = url("https://twitter.com/regadas")
+  ),
+  Developer(
+    id = "jto",
+    name = "Julien Tournay",
+    email = "julient@spotify.com",
+    url = url("https://twitter.com/skaalf")
+  ),
+  Developer(
+    id = "clairemcginty",
+    name = "Claire McGinty",
+    email = "clairem@spotify.com",
+    url = url("http://github.com/clairemcginty")
+  ),
+  Developer(
+    id = "syodage",
+    name = "Shameera Rathnayaka",
+    email = "shameerayodage@gmail.com",
+    url = url("http://github.com/syodage")
+  ),
+  Developer(
+    id = "kellen",
+    name = "Kellen Dye",
+    email = "dye.kellen@gmail.com",
+    url = url("http://github.com/kellen")
+  ),
+  Developer(
+    id = "farzad-sedghi",
+    name = "farzad sedghi",
+    email = "farzadsedghi2@gmail.com",
+    url = url("http://github.com/farzad-sedghi")
   )
-
-  val extras = Set(
-    Scalac.delambdafyInlineOption,
-    Scalac.macroAnnotationsOption,
-    Scalac.macroSettingsOption,
-    Scalac.maxClassfileName,
-    Scalac.privateBackendParallelism,
-    Scalac.privateWarnMacrosOption,
-    Scalac.release8,
-    Scalac.warnConfOption,
-    Scalac.warnMacrosOption
-  )
-
-  opts.filterNot(excludes).union(extras)
-}
-
-ThisBuild / doc / tpolecatDevModeOptions ++= Set(
-  Scalac.docNoJavaCommentOption
 )
 
-ThisBuild / scalafixScalaBinaryVersion := CrossVersion.binaryScalaVersion(scalaVersion.value)
-val excludeLint = SettingKey[Set[Def.KeyedInitialize[_]]]("excludeLintKeys")
-Global / excludeLint := (Global / excludeLint).?.value.getOrElse(Set.empty)
-Global / excludeLint += sonatypeProfileName
-Global / excludeLint += site / Paradox / sourceManaged
+// scala versions
+val scala213 = "2.13.12"
+val scala212 = "2.12.18"
+val scalaDefault = scala213
 
-def previousVersion(currentVersion: String): Option[String] = {
-  val Version =
-    """(?<major>\d+)\.(?<minor>\d+)\.(?<patch>\d+)(?<preRelease>-.*)?(?<build>\+.*)?""".r
-  currentVersion match {
-    case Version(x, y, z, null, null) if z != "0" =>
-      // patch release
-      Some(s"$x.$y.${z.toInt - 1}")
-    case Version(x, y, z, null, _) =>
-      // post release build
-      Some(s"$x.$y.$z")
-    case Version(x, y, z, _, _) if z != "0" =>
-      // patch pre-release
-      Some(s"$x.$y.${z.toInt - 1}")
-    case _ =>
-      None
-  }
-}
+// github actions
+val java21 = JavaSpec.corretto("21")
+val java17 = JavaSpec.corretto("17")
+val java11 = JavaSpec.corretto("11")
+val javaDefault = java11
+val primaryAxisCond = Seq(
+  s"matrix.scala == '${CrossVersion.binaryScalaVersion(scalaDefault)}'",
+  s"matrix.java == '${javaDefault.render}'"
+).mkString(" && ")
 
-lazy val mimaSettings = Def.settings(
-  //format: off
-  mimaBinaryIssueFilters := Seq.empty,
-  // format: on
-  // TODO enable back after 0.14
-  mimaPreviousArtifacts := Set.empty
-//  mimaPreviousArtifacts := previousVersion(version.value)
-//    .filter(_ => publishArtifact.value)
-//    .map(organization.value % s"${normalizedName.value}_${scalaBinaryVersion.value}" % _)
-//    .toSet
+val githubWorkflowGcpAuthStep = WorkflowStep.Use(
+  UseRef.Public("google-github-actions", "auth", "v2"),
+  Map(
+    "credentials_json" -> "${{ secrets.GCP_CREDENTIALS }}",
+    "export_environment_variables" -> "true",
+    "create_credentials_file" -> "true"
+  ),
+  name = Some("gcloud auth")
 )
 
-lazy val formatSettings = Def.settings(scalafmtOnCompile := false, javafmtOnCompile := false)
+ThisBuild / tlJdkRelease := Some(8)
+ThisBuild / tlFatalWarnings := false
+ThisBuild / scalaVersion := scalaDefault
+ThisBuild / crossScalaVersions := Seq(scalaDefault, scala212)
+ThisBuild / githubWorkflowTargetBranches := Seq("main")
+ThisBuild / githubWorkflowJavaVersions := Seq(javaDefault, java17, java21) // default MUST be head
+ThisBuild / githubWorkflowBuildPostamble := Seq(
+  WorkflowStep.Sbt(
+    List("undeclaredCompileDependenciesTest", "unusedCompileDependenciesTest"),
+    name = Some("Check dependencies")
+  )
+)
+ThisBuild / githubWorkflowPublishPreamble := Seq(
+  WorkflowStep.Sbt(
+    List("scio-repl/assembly"),
+    name = Some("Package repl")
+  )
+)
+ThisBuild / githubWorkflowPublishPostamble := Seq(
+  WorkflowStep.Use(
+    UseRef.Public("softprops", "action-gh-release", "v1"),
+    Map(
+      "files" -> "scio-repl/target/scala-2.13/scio-repl.jar",
+      "draft" -> "true"
+    ),
+    name = Some("Upload Repl")
+  )
+)
+ThisBuild / githubWorkflowAddedJobs ++= Seq(
+  WorkflowJob(
+    "coverage",
+    "Test Coverage",
+    WorkflowStep.CheckoutFull ::
+      WorkflowStep.SetupJava(List(javaDefault)) :::
+      List(
+        WorkflowStep.Sbt(
+          List("coverage", "test", "coverageAggregate"),
+          name = Some("Test coverage")
+        ),
+        WorkflowStep.Run(
+          List("bash <(curl -s https://codecov.io/bash)"),
+          name = Some("Upload coverage report")
+        )
+      ),
+    scalas = List(CrossVersion.binaryScalaVersion(scalaDefault)),
+    javas = List(javaDefault)
+  ),
+  WorkflowJob(
+    "it-test",
+    "Integration Test",
+    WorkflowStep.CheckoutFull ::
+      WorkflowStep.SetupJava(List(javaDefault)) :::
+      List(
+        githubWorkflowGcpAuthStep,
+        WorkflowStep.Run(
+          List("scripts/gha_setup.sh"),
+          env = Map(
+            "BQ_READ_TIMEOUT" -> "30000",
+            "CLOUDSQL_SQLSERVER_PASSWORD" -> "${{ secrets.CLOUDSQL_SQLSERVER_PASSWORD }}"
+          ),
+          name = Some("Setup GitHub Action")
+        ),
+        WorkflowStep.Sbt(
+          List("integration/headerCheckAll", "integration/scalafmtCheckAll"),
+          name = Some("Check headers and formatting")
+        ),
+        WorkflowStep.Sbt(
+          List("integration/test"),
+          name = Some("Test")
+        )
+      ),
+    cond = Some("github.event_name != 'pull_request' && github.ref == 'refs/heads/main'"),
+    scalas = List(CrossVersion.binaryScalaVersion(scalaDefault)),
+    javas = List(javaDefault)
+  ),
+  WorkflowJob(
+    "site",
+    "Generate Site",
+    WorkflowStep.CheckoutFull ::
+      WorkflowStep.SetupJava(List(javaDefault)) :::
+      List(
+        githubWorkflowGcpAuthStep,
+        WorkflowStep.Run(
+          List("scripts/gha_setup.sh"),
+          name = Some("Setup GitHub Action")
+        ),
+        WorkflowStep.Sbt(
+          List("scio-examples/compile", "site/makeSite"),
+          env = Map("SOCCO" -> "true"),
+          name = Some("Generate site")
+        ),
+        WorkflowStep.Use(
+          UseRef.Public("peaceiris", "actions-gh-pages", "v3.9.3"),
+          env = Map(
+            "github_token" -> "${{ secrets.GITHUB_TOKEN }}",
+            "publish_dir" -> {
+              val path = (ThisBuild / baseDirectory).value.toPath.toAbsolutePath
+                .relativize((site / target).value.toPath)
+              // os-independent path rendering ...
+              (0 until path.getNameCount).map(path.getName).mkString("/")
+            },
+            "keep_files" -> "true"
+          ),
+          name = Some("Publish site"),
+          cond =
+            Some("github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v')")
+        )
+      ),
+    scalas = List(CrossVersion.binaryScalaVersion(scalaDefault)),
+    javas = List(javaDefault)
+  )
+)
 
+// mima
+ThisBuild / mimaBinaryIssueFilters ++= Seq()
+
+// headers
 lazy val currentYear = java.time.LocalDate.now().getYear
 lazy val keepExistingHeader =
   HeaderCommentStyle.cStyleBlockComment.copy(commentCreator = new CommentCreator() {
@@ -227,145 +366,71 @@ lazy val keepExistingHeader =
         .trim()
   })
 
-lazy val javaSettings = sys.props("java.version") match {
-  case v if v.startsWith("17.") || v.startsWith("21.") =>
-    Def.settings(
-      javaOptions ++= Seq(
-        "--add-opens",
-        "java.base/java.util=ALL-UNNAMED",
-        "--add-opens",
-        "java.base/java.lang.invoke=ALL-UNNAMED"
+val commonSettings = Def.settings(
+  headerLicense := Some(HeaderLicense.ALv2(currentYear.toString, "Spotify AB")),
+  headerMappings := headerMappings.value ++ Map(
+    HeaderFileType.scala -> keepExistingHeader,
+    HeaderFileType.java -> keepExistingHeader
+  ),
+  scalacOptions ++= ScalacOptions.defaults(scalaVersion.value),
+  scalacOptions := {
+    val exclude = ScalacOptions
+      .tokensForVersion(
+        scalaVersion.value,
+        Set(
+          // too many false positives
+          ScalacOptions.privateWarnDeadCode,
+          ScalacOptions.warnDeadCode,
+          // too many warnings
+          ScalacOptions.warnValueDiscard,
+          // not ready for scala 3 yet
+          ScalacOptions.source3
+        )
       )
+      .toSet
+    scalacOptions.value.filterNot(exclude.contains)
+  },
+  javacOptions := {
+    val exclude = Set(
+      // too many warnings
+      "-Xlint:all"
     )
-  case _ => Def.settings()
-}
-
-val commonSettings = formatSettings ++
-  mimaSettings ++
-  javaSettings ++
-  Def.settings(
-    organization := "com.spotify",
-    headerLicense := Some(HeaderLicense.ALv2(currentYear.toString, "Spotify AB")),
-    headerMappings := headerMappings.value + (HeaderFileType.scala -> keepExistingHeader, HeaderFileType.java -> keepExistingHeader),
-    scalaVersion := "2.13.12",
-    crossScalaVersions := Seq("2.12.18", scalaVersion.value),
-    // this setting is not derived in sbt-tpolecat
-    // https://github.com/typelevel/sbt-tpolecat/issues/36
-    inTask(doc)(TpolecatPlugin.projectSettings),
-    javacOptions ++= Seq("-source", "1.8", "-target", "1.8", "-Xlint:unchecked"),
-    Compile / doc / javacOptions := Seq("-source", "1.8"),
-    excludeDependencies += Exclude.beamKafka,
-    excludeDependencies ++= Exclude.loggerImplementations,
-    resolvers ++= Resolver.sonatypeOssRepos("public"),
-    fork := true,
-    run / outputStrategy := Some(OutputStrategy.StdoutOutput),
-    Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.Flat,
-    Test / javaOptions ++= Seq(
-      "-Xms512m",
-      "-Xmx2G",
-      "-XX:+UseParallelGC",
-      "-Dfile.encoding=UTF8",
-      "-Dscio.ignoreVersionWarning=true",
-      "-Dorg.slf4j.simpleLogger.defaultLogLevel=info",
-      "-Dorg.slf4j.simpleLogger.logFile=scio.log"
-    ) ++ Seq(
-      "bigquery.project",
-      "bigquery.secret",
-      "cloudsql.sqlserver.password"
-    ).flatMap { prop =>
-      sys.props.get(prop).map(value => s"-D$prop=$value")
-    },
-    Test / testOptions += Tests.Argument("-oD"),
-    testOptions ++= {
-      if (sys.env.contains("SLOW")) {
-        Nil
-      } else {
-        Seq(Tests.Argument(TestFrameworks.ScalaTest, "-l", "org.scalatest.tags.Slow"))
-      }
-    },
-    unusedCompileDependenciesFilter -= Seq(
-      moduleFilter("org.scala-lang", "scala-reflect"),
-      moduleFilter("org.scala-lang.modules", "scala-collection-compat")
-    ).reduce(_ | _),
-    coverageExcludedPackages := (Seq(
-      "com\\.spotify\\.scio\\.examples\\..*",
-      "com\\.spotify\\.scio\\.repl\\..*",
-      "com\\.spotify\\.scio\\.util\\.MultiJoin",
-      "com\\.spotify\\.scio\\.smb\\.util\\.SMBMultiJoin"
-    ) ++ (2 to 10).map(x => s"com\\.spotify\\.scio\\.sql\\.Query$x")).mkString(";"),
-    coverageHighlighting := true,
-    licenses := Seq("Apache 2" -> url("http://www.apache.org/licenses/LICENSE-2.0.txt")),
-    homepage := Some(url("https://github.com/spotify/scio")),
-    scmInfo := Some(
-      ScmInfo(url("https://github.com/spotify/scio"), "scm:git:git@github.com:spotify/scio.git")
-    ),
-    developers := List(
-      Developer(
-        id = "sinisa_lyh",
-        name = "Neville Li",
-        email = "neville.lyh@gmail.com",
-        url = url("https://twitter.com/sinisa_lyh")
-      ),
-      Developer(
-        id = "ravwojdyla",
-        name = "Rafal Wojdyla",
-        email = "ravwojdyla@gmail.com",
-        url = url("https://twitter.com/ravwojdyla")
-      ),
-      Developer(
-        id = "andrewsmartin",
-        name = "Andrew Martin",
-        email = "andrewsmartin.mg@gmail.com",
-        url = url("https://twitter.com/andrew_martin92")
-      ),
-      Developer(
-        id = "fallonfofallon",
-        name = "Fallon Chen",
-        email = "fallon@spotify.com",
-        url = url("https://twitter.com/fallonfofallon")
-      ),
-      Developer(
-        id = "regadas",
-        name = "Filipe Regadas",
-        email = "filiperegadas@gmail.com",
-        url = url("https://twitter.com/regadas")
-      ),
-      Developer(
-        id = "jto",
-        name = "Julien Tournay",
-        email = "julient@spotify.com",
-        url = url("https://twitter.com/skaalf")
-      ),
-      Developer(
-        id = "clairemcginty",
-        name = "Claire McGinty",
-        email = "clairem@spotify.com",
-        url = url("http://github.com/clairemcginty")
-      ),
-      Developer(
-        id = "syodage",
-        name = "Shameera Rathnayaka",
-        email = "shameerayodage@gmail.com",
-        url = url("http://github.com/syodage")
-      ),
-      Developer(
-        id = "kellen",
-        name = "Kellen Dye",
-        email = "dye.kellen@gmail.com",
-        url = url("http://github.com/kellen")
-      ),
-      Developer(
-        id = "farzad-sedghi",
-        name = "farzad sedghi",
-        email = "farzadsedghi2@gmail.com",
-        url = url("http://github.com/farzad-sedghi")
-      )
-    )
-  )
-
-lazy val publishSettings = Def.settings(
-  // Release settings
-  sonatypeProfileName := "com.spotify"
+    javacOptions.value.filterNot(exclude.contains)
+  },
+  javaOptions := JavaOptions.defaults(javaMajorVersion),
+  excludeDependencies += Exclude.beamKafka,
+  excludeDependencies ++= Exclude.loggerImplementations,
+  resolvers ++= Resolver.sonatypeOssRepos("public"),
+  fork := true,
+  run / outputStrategy := Some(OutputStrategy.StdoutOutput),
+  Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.Flat,
+  Test / javaOptions ++= JavaOptions.testDefaults(javaMajorVersion),
+  Test / testOptions += Tests.Argument("-oD"),
+  testOptions ++= {
+    if (sys.env.contains("SLOW")) {
+      Nil
+    } else {
+      Seq(Tests.Argument(TestFrameworks.ScalaTest, "-l", "org.scalatest.tags.Slow"))
+    }
+  },
+  // libs to help with cross-build
+  libraryDependencies ++= Seq(
+    "com.chuusai" %% "shapeless" % shapelessVersion,
+    "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion
+  ),
+  unusedCompileDependenciesFilter -= Seq(
+    moduleFilter("com.chuusai", "shapeless"),
+    moduleFilter("org.scala-lang", "scala-reflect"),
+    moduleFilter("org.scala-lang.modules", "scala-collection-compat"),
+    moduleFilter("org.typelevel", "scalac-compat-annotation")
+  ).reduce(_ | _),
+  coverageExcludedPackages := (Seq(
+    "com\\.spotify\\.scio\\.examples\\..*",
+    "com\\.spotify\\.scio\\.repl\\..*",
+    "com\\.spotify\\.scio\\.util\\.MultiJoin",
+    "com\\.spotify\\.scio\\.smb\\.util\\.SMBMultiJoin"
+  ) ++ (2 to 10).map(x => s"com\\.spotify\\.scio\\.sql\\.Query$x")).mkString(";"),
+  coverageHighlighting := true
 )
 
 // for modules containing java jUnit 4 tests
@@ -389,8 +454,10 @@ lazy val macroSettings = Def.settings(
       case _ => Nil
     }
   },
-  // see MacroSettings.scala
-  scalacOptions += "-Xmacro-settings:cache-implicit-schemas=true"
+  scalacOptions ++= ScalacOptions.tokensForVersion(
+    scalaVersion.value,
+    Set(ScalacOptions.macroCacheImplicitSchemas(true))
+  )
 )
 
 lazy val directRunnerDependencies = Seq(
@@ -468,11 +535,11 @@ def splitTests(tests: Seq[TestDefinition], filter: Seq[String], forkOptions: For
   }
 }
 
-lazy val root: Project = Project("scio", file("."))
+lazy val scio = project
+  .in(file("."))
+  .enablePlugins(NoPublishPlugin)
   .settings(commonSettings)
   .settings(
-    publish / skip := true,
-    mimaPreviousArtifacts := Set.empty,
     assembly / aggregate := false
   )
   .aggregate(
@@ -498,12 +565,11 @@ lazy val root: Project = Project("scio", file("."))
     `scio-test`
   )
 
-lazy val `scio-core`: Project = project
+lazy val `scio-core` = project
   .in(file("scio-core"))
   .enablePlugins(BuildInfoPlugin)
   .dependsOn(`scio-macros`)
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(macroSettings)
   .settings(
     description := "Scio - A Scala API for Apache Beam and Google Cloud Dataflow",
@@ -515,7 +581,6 @@ lazy val `scio-core`: Project = project
     unusedCompileDependenciesFilter -= moduleFilter("com.google.auto.service", "auto-service"),
     libraryDependencies ++= Seq(
       // compile
-      "com.chuusai" %% "shapeless" % shapelessVersion,
       "com.esotericsoftware" % "kryo-shaded" % kryoVersion,
       "com.fasterxml.jackson.core" % "jackson-annotations" % jacksonVersion,
       "com.fasterxml.jackson.core" % "jackson-databind" % jacksonVersion,
@@ -544,7 +609,6 @@ lazy val `scio-core`: Project = project
       "org.apache.commons" % "commons-compress" % commonsCompressVersion,
       "org.apache.commons" % "commons-lang3" % commonsLang3Version,
       "org.apache.commons" % "commons-math3" % commonsMath3Version,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       "org.typelevel" %% "algebra" % algebraVersion,
       // provided
@@ -559,14 +623,13 @@ lazy val `scio-core`: Project = project
     buildInfoPackage := "com.spotify.scio"
   )
 
-lazy val `scio-test`: Project = project
+lazy val `scio-test` = project
   .in(file("scio-test"))
   .dependsOn(
     `scio-core` % "compile",
     `scio-avro` % "compile->test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(jUnitSettings)
   .settings(macroSettings)
   .settings(protobufSettings)
@@ -597,7 +660,6 @@ lazy val `scio-test`: Project = project
       "org.apache.beam" % "beam-sdks-java-core" % beamVersion,
       "org.apache.beam" % "beam-sdks-java-extensions-google-cloud-platform-core" % beamVersion,
       "org.hamcrest" % "hamcrest" % hamcrestVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.scalactic" %% "scalactic" % scalatestVersion,
       "org.scalatest" %% "scalatest" % scalatestVersion,
       "org.typelevel" %% "cats-kernel" % catsVersion,
@@ -622,27 +684,24 @@ lazy val `scio-test`: Project = project
     )
   )
 
-lazy val `scio-macros`: Project = project
+lazy val `scio-macros` = project
   .in(file("scio-macros"))
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(macroSettings)
   .settings(
     description := "Scio macros",
     libraryDependencies ++= Seq(
       // compile
-      "com.chuusai" %% "shapeless" % shapelessVersion,
       "com.softwaremill.magnolia1_2" %% "magnolia" % magnoliaVersion
     )
   )
 
-lazy val `scio-avro`: Project = project
+lazy val `scio-avro` = project
   .in(file("scio-avro"))
   .dependsOn(
     `scio-core`
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(macroSettings)
   .settings(
     description := "Scio add-on for working with Avro",
@@ -657,7 +716,6 @@ lazy val `scio-avro`: Project = project
       "org.apache.beam" % "beam-sdks-java-core" % beamVersion,
       "org.apache.beam" % "beam-sdks-java-extensions-avro" % beamVersion,
       "org.apache.beam" % "beam-vendor-guava-26_0-jre" % beamVendorVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       // test
       "com.spotify" %% "magnolify-cats" % magnolifyVersion % Test,
@@ -671,7 +729,7 @@ lazy val `scio-avro`: Project = project
     )
   )
 
-lazy val `scio-google-cloud-platform`: Project = project
+lazy val `scio-google-cloud-platform` = project
   .in(file("scio-google-cloud-platform"))
   .dependsOn(
     `scio-core`,
@@ -679,7 +737,6 @@ lazy val `scio-google-cloud-platform`: Project = project
     `scio-test` % "test->test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(macroSettings)
   .settings(jUnitSettings)
   .settings(beamRunnerSettings)
@@ -740,14 +797,13 @@ lazy val `scio-google-cloud-platform`: Project = project
     )
   )
 
-lazy val `scio-cassandra3`: Project = project
+lazy val `scio-cassandra3` = project
   .in(file("scio-cassandra/cassandra3"))
   .dependsOn(
     `scio-core`,
     `scio-test` % "test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(
     description := "Scio add-on for Apache Cassandra 3.x",
     libraryDependencies ++= Seq(
@@ -762,7 +818,6 @@ lazy val `scio-cassandra3`: Project = project
       "org.apache.cassandra" % "cassandra-all" % cassandraVersion,
       "org.apache.hadoop" % "hadoop-common" % hadoopVersion,
       "org.apache.hadoop" % "hadoop-mapreduce-client-core" % hadoopVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       // test
       "org.apache.beam" % "beam-sdks-java-core" % beamVersion % Test,
       "org.scalatest" %% "scalatest" % scalatestVersion % Test,
@@ -770,14 +825,13 @@ lazy val `scio-cassandra3`: Project = project
     )
   )
 
-lazy val `scio-elasticsearch-common`: Project = project
+lazy val `scio-elasticsearch-common` = project
   .in(file("scio-elasticsearch/common"))
   .dependsOn(
     `scio-core`,
     `scio-test` % "test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(
     description := "Scio add-on for writing to Elasticsearch",
     libraryDependencies ++= Seq(
@@ -790,7 +844,6 @@ lazy val `scio-elasticsearch-common`: Project = project
       "org.apache.httpcomponents" % "httpasyncclient" % httpAsyncClientVersion,
       "org.apache.httpcomponents" % "httpclient" % httpClientVersion,
       "org.apache.httpcomponents" % "httpcore" % httpCoreVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       // provided
       "co.elastic.clients" % "elasticsearch-java" % elasticsearch8Version % Provided,
@@ -801,13 +854,12 @@ lazy val `scio-elasticsearch-common`: Project = project
     )
   )
 
-lazy val `scio-elasticsearch7`: Project = project
+lazy val `scio-elasticsearch7` = project
   .in(file("scio-elasticsearch/es7"))
   .dependsOn(
     `scio-elasticsearch-common`
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(
     description := "Scio add-on for writing to Elasticsearch",
     unusedCompileDependenciesFilter -= moduleFilter("co.elastic.clients", "elasticsearch-java"),
@@ -816,13 +868,12 @@ lazy val `scio-elasticsearch7`: Project = project
     )
   )
 
-lazy val `scio-elasticsearch8`: Project = project
+lazy val `scio-elasticsearch8` = project
   .in(file("scio-elasticsearch/es8"))
   .dependsOn(
     `scio-elasticsearch-common`
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(
     description := "Scio add-on for writing to Elasticsearch",
     unusedCompileDependenciesFilter -= moduleFilter("co.elastic.clients", "elasticsearch-java"),
@@ -831,7 +882,7 @@ lazy val `scio-elasticsearch8`: Project = project
     )
   )
 
-lazy val `scio-extra`: Project = project
+lazy val `scio-extra` = project
   .in(file("scio-extra"))
   .dependsOn(
     `scio-core` % "compile;provided->provided",
@@ -841,7 +892,6 @@ lazy val `scio-extra`: Project = project
     `scio-macros`
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(jUnitSettings)
   .settings(macroSettings)
   .settings(
@@ -869,7 +919,6 @@ lazy val `scio-extra`: Project = project
       "org.apache.beam" % "beam-sdks-java-extensions-sorter" % beamVersion,
       "org.apache.beam" % "beam-sdks-java-extensions-zetasketch" % beamVersion,
       "org.apache.beam" % "beam-vendor-guava-26_0-jre" % beamVendorVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.scalanlp" %% "breeze" % breezeVersion,
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       "org.typelevel" %% "algebra" % algebraVersion,
@@ -887,14 +936,13 @@ lazy val `scio-extra`: Project = project
     compileOrder := CompileOrder.JavaThenScala
   )
 
-lazy val `scio-grpc`: Project = project
+lazy val `scio-grpc` = project
   .in(file("scio-grpc"))
   .dependsOn(
     `scio-core`,
     `scio-test` % "test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(protobufSettings)
   .settings(
     description := "Scio add-on for gRPC",
@@ -913,14 +961,13 @@ lazy val `scio-grpc`: Project = project
     )
   )
 
-lazy val `scio-jdbc`: Project = project
+lazy val `scio-jdbc` = project
   .in(file("scio-jdbc"))
   .dependsOn(
     `scio-core`,
     `scio-test` % "test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(
     description := "Scio add-on for JDBC",
     libraryDependencies ++= Seq(
@@ -934,14 +981,13 @@ lazy val `scio-jdbc`: Project = project
     )
   )
 
-lazy val `scio-neo4j`: Project = project
+lazy val `scio-neo4j` = project
   .in(file("scio-neo4j"))
   .dependsOn(
     `scio-core`,
     `scio-test` % "test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(
     description := "Scio add-on for Neo4J",
     libraryDependencies ++= Seq(
@@ -956,7 +1002,7 @@ lazy val `scio-neo4j`: Project = project
 
 val ensureSourceManaged = taskKey[Unit]("ensureSourceManaged")
 
-lazy val `scio-parquet`: Project = project
+lazy val `scio-parquet` = project
   .in(file("scio-parquet"))
   .dependsOn(
     `scio-core`,
@@ -965,7 +1011,6 @@ lazy val `scio-parquet`: Project = project
     `scio-test` % "test->test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(
     // change annotation processor output directory so IntelliJ can pick them up
     ensureSourceManaged := IO.createDirectory(sourceManaged.value / "main"),
@@ -1001,7 +1046,6 @@ lazy val `scio-parquet`: Project = project
       "org.apache.parquet" % "parquet-column" % parquetVersion,
       "org.apache.parquet" % "parquet-common" % parquetVersion,
       "org.apache.parquet" % "parquet-hadoop" % parquetVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.slf4j" % "log4j-over-slf4j" % slf4jVersion, // log4j is excluded from hadoop
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       // provided
@@ -1011,7 +1055,7 @@ lazy val `scio-parquet`: Project = project
     )
   )
 
-lazy val `scio-tensorflow`: Project = project
+lazy val `scio-tensorflow` = project
   .in(file("scio-tensorflow"))
   .dependsOn(
     `scio-avro`,
@@ -1019,7 +1063,6 @@ lazy val `scio-tensorflow`: Project = project
     `scio-test` % "test->test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(protobufSettings)
   .settings(
     description := "Scio add-on for TensorFlow",
@@ -1037,7 +1080,6 @@ lazy val `scio-tensorflow`: Project = project
       "org.apache.beam" % "beam-sdks-java-core" % beamVersion,
       "org.apache.beam" % "beam-vendor-guava-26_0-jre" % beamVendorVersion,
       "org.apache.commons" % "commons-compress" % commonsCompressVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       "org.tensorflow" % "ndarray" % ndArrayVersion,
       "org.tensorflow" % "tensorflow-core-api" % tensorFlowVersion,
@@ -1061,8 +1103,9 @@ lazy val `scio-tensorflow`: Project = project
     }
   )
 
-lazy val `scio-examples`: Project = project
+lazy val `scio-examples` = project
   .in(file("scio-examples"))
+  .enablePlugins(NoPublishPlugin)
   .disablePlugins(ScalafixPlugin)
   .dependsOn(
     `scio-core`,
@@ -1083,12 +1126,15 @@ lazy val `scio-examples`: Project = project
   .settings(beamRunnerSettings)
   .settings(macroSettings)
   .settings(
-    publish / skip := true,
-    mimaPreviousArtifacts := Set.empty,
-    tpolecatExcludeOptions ++= Set(
-      ScalacOptions.warnUnusedLocals,
-      ScalacOptions.privateWarnUnusedLocals
-    ),
+    scalacOptions := {
+      val exclude = ScalacOptions
+        .tokensForVersion(
+          scalaVersion.value,
+          Set(ScalacOptions.warnUnused, ScalacOptions.privateWarnUnused)
+        )
+        .toSet
+      scalacOptions.value.filterNot(exclude.contains)
+    },
     undeclaredCompileDependenciesFilter := NothingFilter,
     unusedCompileDependenciesFilter -= moduleFilter("mysql", "mysql-connector-java"),
     libraryDependencies ++= Seq(
@@ -1123,7 +1169,6 @@ lazy val `scio-examples`: Project = project
       "org.apache.beam" % "beam-sdks-java-extensions-google-cloud-platform-core" % beamVersion,
       "org.apache.beam" % "beam-sdks-java-extensions-sql" % beamVersion,
       "org.apache.beam" % "beam-sdks-java-io-google-cloud-platform" % beamVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       // runtime
       "com.google.cloud.bigdataoss" % "gcs-connector" % s"hadoop2-$bigdataossVersion" % Runtime,
@@ -1142,7 +1187,6 @@ lazy val `scio-examples`: Project = project
         "RunPreReleaseIT.scala"
       }
     },
-    run / fork := true,
     Compile / doc / sources := List(),
     Test / testGrouping := splitTests(
       (Test / definedTests).value,
@@ -1151,7 +1195,7 @@ lazy val `scio-examples`: Project = project
     )
   )
 
-lazy val `scio-repl`: Project = project
+lazy val `scio-repl` = project
   .in(file("scio-repl"))
   .dependsOn(
     `scio-core`,
@@ -1159,13 +1203,14 @@ lazy val `scio-repl`: Project = project
     `scio-extra`
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(macroSettings)
   .settings(
     // drop repl compatibility with java 8
-    tpolecatDevModeOptions ~= { _.filterNot(_ == Scalac.release8) },
-    // do not fork when running otherwise system terminal cannot be created.
-    run / fork := false,
+    tlJdkRelease := Some(11),
+    unusedCompileDependenciesFilter -= Seq(
+      moduleFilter("org.scala-lang", "scala-compiler"),
+      moduleFilter("org.scalamacros", "paradise")
+    ).reduce(_ | _),
     libraryDependencies ++= Seq(
       // compile
       "com.nrinaudo" %% "kantan.codecs" % kantanCodecsVersion,
@@ -1175,7 +1220,6 @@ lazy val `scio-repl`: Project = project
       "org.apache.beam" % "beam-sdks-java-core" % beamVersion excludeAll (Exclude.gcsio),
       "org.apache.beam" % "beam-sdks-java-extensions-google-cloud-platform-core" % beamVersion,
       "org.scala-lang" % "scala-compiler" % scalaVersion.value,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       // runtime
       "org.apache.beam" % "beam-runners-direct-java" % beamVersion % Runtime,
@@ -1256,7 +1300,7 @@ lazy val `scio-repl`: Project = project
     }
   )
 
-lazy val `scio-jmh`: Project = project
+lazy val `scio-jmh` = project
   .in(file("scio-jmh"))
   .enablePlugins(JmhPlugin)
   .dependsOn(
@@ -1274,21 +1318,19 @@ lazy val `scio-jmh`: Project = project
     libraryDependencies ++= directRunnerDependencies ++ Seq(
       // test
       "org.hamcrest" % "hamcrest" % hamcrestVersion % Test,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion % Test,
       "org.slf4j" % "slf4j-nop" % slf4jVersion % Test
     ),
     publish / skip := true,
     mimaPreviousArtifacts := Set.empty
   )
 
-lazy val `scio-smb`: Project = project
+lazy val `scio-smb` = project
   .in(file("scio-smb"))
   .dependsOn(
     `scio-core`,
     `scio-test` % "test->test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(jUnitSettings)
   .settings(beamRunnerSettings)
   .settings(
@@ -1322,7 +1364,6 @@ lazy val `scio-smb`: Project = project
       "org.apache.beam" % "beam-vendor-guava-26_0-jre" % beamVendorVersion,
       "org.apache.commons" % "commons-lang3" % commonsLang3Version,
       "org.checkerframework" % "checker-qual" % checkerQualVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "org.slf4j" % "log4j-over-slf4j" % slf4jVersion, // log4j is excluded from hadoop
       "org.slf4j" % "slf4j-api" % slf4jVersion,
       // provided
@@ -1353,14 +1394,13 @@ lazy val `scio-smb`: Project = project
     compileOrder := CompileOrder.JavaThenScala
   )
 
-lazy val `scio-redis`: Project = project
+lazy val `scio-redis` = project
   .in(file("scio-redis"))
   .dependsOn(
     `scio-core`,
     `scio-test` % "test"
   )
   .settings(commonSettings)
-  .settings(publishSettings)
   .settings(
     description := "Scio integration with Redis",
     libraryDependencies ++= Seq(
@@ -1369,7 +1409,6 @@ lazy val `scio-redis`: Project = project
       "joda-time" % "joda-time" % jodaTimeVersion,
       "org.apache.beam" % "beam-sdks-java-core" % beamVersion,
       "org.apache.beam" % "beam-sdks-java-io-redis" % beamVersion,
-      "org.scala-lang.modules" %% "scala-collection-compat" % scalaCollectionCompatVersion,
       "redis.clients" % "jedis" % jedisVersion,
       // test
       "org.scalatest" %% "scalatest" % scalatestVersion % Test,
@@ -1377,7 +1416,7 @@ lazy val `scio-redis`: Project = project
     )
   )
 
-lazy val integration: Project = project
+lazy val integration = project
   .in(file("integration"))
   .dependsOn(
     `scio-core` % "test->provided,test",
@@ -1415,7 +1454,7 @@ lazy val integration: Project = project
 // =======================================================================
 // Site settings
 // =======================================================================
-lazy val site: Project = project
+lazy val site = project
   .in(file("site"))
   .enablePlugins(
     ParadoxSitePlugin,
@@ -1488,7 +1527,7 @@ lazy val site: Project = project
     mdocIn := (paradox / sourceDirectory).value,
     mdocExtraArguments ++= Seq("--no-link-hygiene"),
     // paradox
-    paradox / sourceManaged := mdocOut.value,
+    Compile / paradox / sourceManaged := mdocOut.value,
     paradoxProperties ++= Map(
       "extref.example.base_url" -> "https://spotify.github.io/scio/examples/%s.scala.html",
       "github.base_url" -> "https://github.com/spotify/scio",
@@ -1523,14 +1562,12 @@ lazy val site: Project = project
 lazy val soccoIndex = taskKey[File]("Generates examples/index.html")
 lazy val soccoSettings = if (sys.env.contains("SOCCO")) {
   Seq(
-    // socco-ng has not been published for more recent scala versions
-    scalaVersion := "2.13.10",
     scalacOptions ++= Seq(
       "-P:socco:out:scio-examples/target/site",
       "-P:socco:package_com.spotify.scio:https://spotify.github.io/scio/api"
     ),
     autoCompilerPlugins := true,
-    addCompilerPlugin(("io.regadas" %% "socco-ng" % "0.1.8").cross(CrossVersion.full)),
+    addCompilerPlugin(("io.regadas" %% "socco-ng" % "0.1.10").cross(CrossVersion.full)),
     // Generate scio-examples/target/site/index.html
     soccoIndex := SoccoIndex.generate(target.value / "site" / "index.html"),
     Compile / compile := {
